--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,40 @@
 body{
+	margin:0;
+}
+
+nav{
+	display:flex;
+	background:#95c18f;
 	font-family: sans-serif;
+	justify-content: space-between;
+	padding:10px;
+	
+}
+
+nav ul{
+	padding-top: 5px;
+}
+nav li a{
+	color: black;
+	text-decoration: none;
+
+}
+
+a:hover{
+	color: white;
+	background: #DCE098;
+}
+
+
+
+nav li{
+	display: inline;
+	margin:5px;
+	
+}
+
+
+li{
+	list-style-type: none;
+
 }
